--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 README 
 Foursquair - A desktop app for keeping track of your friends during the day.
 
+@author seth (rd11.com)
 @author naveen (naveenium.com)
 @author Lucas (www.imlucas.com)
 -------------------------------------------
